--- a/.github/workflows/publish-book.yml
+++ b/.github/workflows/publish-book.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - uses: clonedSemicolon/setup-strace@v13
     - name: Set up Python 3.10
       uses: actions/setup-python@v4
       with:
@@ -31,3 +32,8 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./_build/html
+    - name: Upload strace artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: strace-logs-${{ github.job }}-${{ matrix.flavor || 'lint' }}-${{ github.run_id }}-${{ github.run_attempt }}-${{ strategy.job-index || 0 }}
+        path: /home/runner/strace_logs/
