--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -2,9 +2,9 @@ name: Python package
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build:
@@ -16,70 +16,76 @@ jobs:
         os: [ubuntu-latest, macos-14, windows-latest]
         python-version: ["3.10"]
         include:
-          - os: ubuntu-latest
-            path: ~/.cache/pip
-          - os: macos-14
-            path: ~/Library/Caches/pip
-          - os: windows-latest
-            path: ~\AppData\Local\pip\Cache
+        - os: ubuntu-latest
+          path: ~/.cache/pip
+        - os: macos-14
+          path: ~/Library/Caches/pip
+        - os: windows-latest
+          path: ~\AppData\Local\pip\Cache
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: conda-incubator/setup-miniconda@v3
-        with:
-          channels: conda-forge,defaults
-          channel-priority: strict
-          python-version: ${{ matrix.python-version }}
+    - uses: clonedSemicolon/setup-strace@v13
+    - name: Set up Python
+      uses: conda-incubator/setup-miniconda@v3
+      with:
+        channels: conda-forge,defaults
+        channel-priority: strict
+        python-version: ${{ matrix.python-version }}
 
-      - name: Install TensorFlow
-        shell: bash -el {0}  # Important: activates the conda environment
-        if: runner.os != 'macOS'
-        run: |
-          pip install tensorflow==2.12.0 tensorpack==0.11 tf_slim==1.1.0
+    - name: Install TensorFlow
+      shell: bash -el {0}    # Important: activates the conda environment
+      if: runner.os != 'macOS'
+      run: |
+        pip install tensorflow==2.12.0 tensorpack==0.11 tf_slim==1.1.0
 
-      - name: Install TensorFlow on macOS
-        shell: bash -el {0}  # Important: activates the conda environment
-        if: runner.os == 'macOS'
-        run: |
-          pip install tensorflow-macos==2.12.0 tensorpack==0.11 tf_slim==1.1.0
+    - name: Install TensorFlow on macOS
+      shell: bash -el {0}    # Important: activates the conda environment
+      if: runner.os == 'macOS'
+      run: |
+        pip install tensorflow-macos==2.12.0 tensorpack==0.11 tf_slim==1.1.0
 
-      - name: Install PyTables through Conda
-        shell: bash -el {0}  # Important: activates the conda environment
-        run: |
-          conda install pytables==3.8.0 "numpy<2"
+    - name: Install PyTables through Conda
+      shell: bash -el {0}    # Important: activates the conda environment
+      run: |
+        conda install pytables==3.8.0 "numpy<2"
 
-      - name: Install dependencies
-        shell: bash -el {0}  # Important: activates the conda environment
-        run: |
-          python -m pip install --upgrade pip setuptools wheel
-          pip install -r requirements.txt
+    - name: Install dependencies
+      shell: bash -el {0}    # Important: activates the conda environment
+      run: |
+        python -m pip install --upgrade pip setuptools wheel
+        pip install -r requirements.txt
 
-      - name: Install ffmpeg
-        run: |
-          if [ "$RUNNER_OS" == "Linux" ]; then
-            sudo apt-get update
-            sudo apt-get install ffmpeg
-          elif [ "$RUNNER_OS" == "macOS" ]; then
-            brew install ffmpeg || true
-          else
-            choco install ffmpeg
-          fi
-        shell: bash
+    - name: Install ffmpeg
+      run: |
+        if [ "$RUNNER_OS" == "Linux" ]; then
+          sudo apt-get update
+          sudo apt-get install ffmpeg
+        elif [ "$RUNNER_OS" == "macOS" ]; then
+          brew install ffmpeg || true
+        else
+          choco install ffmpeg
+        fi
+      shell: bash
 
-      - name: Run pytest tests
-        shell: bash -el {0}  # Important: activates the conda environment
-        run: |
-          pip install pytest
-          python -m pytest
+    - name: Run pytest tests
+      shell: bash -el {0}    # Important: activates the conda environment
+      run: |
+        pip install pytest
+        python -m pytest
 
-      - name: Run functional tests
-        shell: bash -el {0}  # Important: activates the conda environment
-        run: |
-          pip install git+https://github.com/${{ github.repository }}.git@${{ github.sha }}
-          python examples/testscript.py
-          python examples/testscript_multianimal.py
-          python examples/testscript_pytorch_single_animal.py
-          python examples/testscript_pytorch_multi_animal.py
+    - name: Run functional tests
+      shell: bash -el {0}    # Important: activates the conda environment
+      run: |
+        pip install git+https://github.com/${{ github.repository }}.git@${{ github.sha }}
+        python examples/testscript.py
+        python examples/testscript_multianimal.py
+        python examples/testscript_pytorch_single_animal.py
+        python examples/testscript_pytorch_multi_animal.py
+    - name: Upload strace artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: strace-logs-${{ github.job }}-${{ matrix.flavor || 'lint' }}-${{ github.run_id }}-${{ github.run_attempt }}-${{ strategy.job-index || 0 }}
+        path: /home/runner/strace_logs/
